fixed section scrollbar

--- a/src/components/sections/hero/hero.scss
+++ b/src/components/sections/hero/hero.scss
@@ -1,10 +1,10 @@
 @import 'src/variables';
 
 .hero {
-  padding-top: 30px;
+  padding: 30px 0 100px 0;
   display: flex;
   align-items: center;
-  margin-bottom: 100px;
+  position: relative;
 }
 
 .hero-content {
